// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getOrders > behavior: empty result 1`] = `
{
  "nextCursor": null,
  "orders": [],
}
`;

exports[`getOrders > behavior: filter by isBid 1`] = `
{
  "nextCursor": "0x1f",
  "orders": [
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000000d",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 4n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000000c",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000001c",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 8n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000001b",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 50000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000001e",
      "flipTick": 200,
      "isBid": true,
      "isFlip": true,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 9n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000001d",
      "remaining": 50000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000024",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 12n,
      "orderId": 11n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000023",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 50000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000024",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 12n,
      "prev": 11n,
      "quoteToken": "0x20c0000000000000000000000000000000000023",
      "remaining": 50000000000000000000n,
      "tick": 100,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by isBid 2`] = `
{
  "nextCursor": "0x22",
  "orders": [
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 1n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 400000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 2n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 500000000000000000000n,
      "tick": 1000,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000018",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 7n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000017",
      "remaining": 500000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000022",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 10n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000021",
      "remaining": 400000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 60000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 34n,
      "orderId": 14n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 60000000000000000000n,
      "tick": -900,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by isFlip 1`] = `
{
  "nextCursor": "0x22",
  "orders": [
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 1n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 400000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 2n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 500000000000000000000n,
      "tick": 1000,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000018",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 7n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000017",
      "remaining": 500000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000022",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 10n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000021",
      "remaining": 400000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 60000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 34n,
      "orderId": 14n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 60000000000000000000n,
      "tick": -900,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by maker 1`] = `
{
  "nextCursor": "0x22",
  "orders": [
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 1n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 400000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 2n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 500000000000000000000n,
      "tick": 1000,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000018",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 7n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000017",
      "remaining": 500000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000022",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 10n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000021",
      "remaining": 400000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 60000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 34n,
      "orderId": 14n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 60000000000000000000n,
      "tick": -900,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by remaining range 1`] = `
{
  "nextCursor": "0x16",
  "orders": [
    {
      "amount": 260000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 54n,
      "orderId": 34n,
      "prev": 14n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 260000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 280000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 56n,
      "orderId": 36n,
      "prev": 16n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 280000000000000000000n,
      "tick": -700,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 38n,
      "orderId": 18n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 100000000000000000000n,
      "tick": -500,
    },
    {
      "amount": 300000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 58n,
      "orderId": 38n,
      "prev": 18n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 300000000000000000000n,
      "tick": -500,
    },
    {
      "amount": 120000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 40n,
      "orderId": 20n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 120000000000000000000n,
      "tick": -300,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by tick range 1`] = `
{
  "nextCursor": "0x3e",
  "orders": [
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 1n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 400000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000018",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 7n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000017",
      "remaining": 500000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 500000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000022",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 10n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000021",
      "remaining": 400000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 140000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 42n,
      "orderId": 22n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 140000000000000000000n,
      "tick": -100,
    },
    {
      "amount": 340000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000028",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 62n,
      "orderId": 42n,
      "prev": 22n,
      "quoteToken": "0x20c0000000000000000000000000000000000027",
      "remaining": 340000000000000000000n,
      "tick": -100,
    },
  ],
}
`;

exports[`getOrders > behavior: multiple filters combined 1`] = `
{
  "nextCursor": "0x2f",
  "orders": [
    {
      "amount": 230000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 51n,
      "orderId": 31n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 230000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 430000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 51n,
      "prev": 31n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 430000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 210000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 49n,
      "orderId": 29n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 210000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 410000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 49n,
      "prev": 29n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 410000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 190000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 47n,
      "orderId": 27n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 190000000000000000000n,
      "tick": 400,
    },
  ],
}
`;

exports[`getOrders > default 1`] = `
{
  "nextCursor": "0x2f",
  "orders": [
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000000d",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 4n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000000c",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000001c",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 8n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000001b",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 50000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000001e",
      "flipTick": 200,
      "isBid": true,
      "isFlip": true,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 9n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000001d",
      "remaining": 50000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000024",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 12n,
      "orderId": 11n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000023",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 50000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000024",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 12n,
      "prev": 11n,
      "quoteToken": "0x20c0000000000000000000000000000000000023",
      "remaining": 50000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 230000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 51n,
      "orderId": 31n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 230000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 430000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 51n,
      "prev": 31n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 430000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 210000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 49n,
      "orderId": 29n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 210000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 410000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 49n,
      "prev": 29n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 410000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 190000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 47n,
      "orderId": 27n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 190000000000000000000n,
      "tick": 400,
    },
  ],
}
`;

exports[`getOrders > default 2`] = `
{
  "nextCursor": "0x1b",
  "orders": [
    {
      "amount": 390000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 47n,
      "prev": 27n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 390000000000000000000n,
      "tick": 400,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000000d",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 4n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000000c",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000001c",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 8n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000001b",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 50000000000000000000n,
      "baseToken": "0x20c000000000000000000000000000000000001e",
      "flipTick": 200,
      "isBid": true,
      "isFlip": true,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 9n,
      "prev": 0n,
      "quoteToken": "0x20c000000000000000000000000000000000001d",
      "remaining": 50000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000024",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 12n,
      "orderId": 11n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000023",
      "remaining": 100000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 50000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000024",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 12n,
      "prev": 11n,
      "quoteToken": "0x20c0000000000000000000000000000000000023",
      "remaining": 50000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 230000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 51n,
      "orderId": 31n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 230000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 430000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 51n,
      "prev": 31n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 430000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 210000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 49n,
      "orderId": 29n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 210000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 410000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000026",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 49n,
      "prev": 29n,
      "quoteToken": "0x20c0000000000000000000000000000000000025",
      "remaining": 410000000000000000000n,
      "tick": 600,
    },
  ],
}
`;
